--- a/jsrpg/index.html
+++ b/jsrpg/index.html
@@ -16,6 +16,7 @@
         <script src="Script/Asset.js"></script>
         <script src="Script/Data.js"></script>
 
+        <script src="Script/Const.js"></script>
         <script src="Script/Var.js"></script>
 
         <script src="Script/Function/Function.js"></script>
